--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,3 @@
 .App {
-  text-align: center;
+    padding: 50
 }
-
-.App-content {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-
